sample/retrieveUnpackaged/objects/ECO_Price__c.object
<CustomObject>
    <fields>
        <fullName>ECO_Price__c</fullName>
        <label>ECO Price</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ECO Prices</relationshipLabel>
        <relationshipName>ECO_Prices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Rejected_Reason__c</fullName>
        <label>Other Rejected Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Too expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happy with septic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer&apos;s age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t want to connect early</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ECO Price</label>
    <nameField>
        <displayFormat>EP-{000000}</displayFormat>
        <label>ECO Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ECO Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Other_reason_blank_if_reason_not_other</fullName>
        <active>true</active>
        <description>If the Rejected Reason is not set to other, other rejected reason must not be entered.</description>
        <errorConditionFormula>NOT(  ISPICKVAL(Rejected_Reason__c, &apos;Other&apos;) ) &amp;&amp; NOT ( ISBLANK ( Other_Rejected_Reason__c ))</errorConditionFormula>
        <errorDisplayField>Other_Rejected_Reason__c</errorDisplayField>
        <errorMessage>Other Rejected Reason can only be entered if the Rejected Reason is set to Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_reason_populated_if_reason_other</fullName>
        <active>true</active>
        <description>If the Rejected Reason is set to other, other rejected reason must be entered.</description>
        <errorConditionFormula>ISPICKVAL(Rejected_Reason__c, &apos;Other&apos;)    &amp;&amp;  ISBLANK ( Other_Rejected_Reason__c )</errorConditionFormula>
        <errorDisplayField>Other_Rejected_Reason__c</errorDisplayField>
        <errorMessage>Other Rejected Reason must be entered if the Rejected Reason is set to Other</errorMessage>
    </validationRules>
</CustomObject>